syntax = "proto3";
package core.v1;

import "kernel/resource.proto";

option go_package = "github.com/aileron-gateway/aileron-gateway/apis/core/v1";

// GoPlugin resource definition.
// apiVersion="core/v1", kind="GoPlugin".
message GoPlugin {
    string          APIVersion = 1 [json_name = "apiVersion"];
    string          Kind       = 2 [json_name = "kind"];
    kernel.Metadata Metadata   = 3 [json_name = "metadata"];
    GoPluginSpec    Spec       = 4 [json_name = "spec"];
}

// GoPluginSpec is the specifications of the GoPlugin object.
message GoPluginSpec {
    // [REQUIRED]
    // PluginPath is path to the shared object of the GoPlugin.
    // The path can be absolute or relative.
    // Default is not set.
    string PluginPath = 1 [json_name = "pluginPath"];

    // [OPTIONAL]
    // SymbolName is synbol name to lookup.
    // Default is ["Plugin"].
    string SymbolName = 2 [json_name = "symbolName"];
}
